<resources>
    <string name="open">Aberto</string>
    <string name="close">Fechado</string>
    <string name="app_name">Pagme</string>
    <string name="newCard">Novo Cartão</string>
    <string name="cardName">Nome do Cartão</string>
    <string name="closure">Fechamento</string>
    <string name="dueDate">Vencimento</string>
    <string name="save">SALVAR</string>
    <string name="newDebt">Nova Dívida</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="card">Cartão</string>
    <string name="TotalPurchaseAmount">Valor Total da Compra</string>
    <string name="Installments">Parcelas</string>
    <string name="valueInstallments">Valor da Parcela</string>
    <string name="buyerName">Nome do Comprador</string>
    <string name="edit_divide">Editar Dívida</string>
    <string name="inserted_card">Cartão Inserido</string>
    <string name="erro_inserted_card">Erro ao Inserir Cartão</string>
    <string name="meus_cart_es">Meus Cartões</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="pagme">Pagme</string>
    <string name="excluir_cart_o">Excluir Cartão</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="adicionar_novo_debito">Adicionar Novo Débito</string>
    <string name="bot_o_de_excluir_divida">Botão de Excluir Dívida</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="email">E-mail</string>
    <string name="nome_de_usu_rio">Nome de Usuário</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha">Esqueci Minha Senha</string>
    <string name="logomarca">Logomarca</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="add_card_field_error">Campo Obrigatório</string>
    <string name="campo_obrigatorio">Campo Obrigatório</string>
    <string name="msg_reset_password">Enviaremos um e-mail com instruções de como redefinir sua senha, verifique também a caixa de spam.</string>
    <string name="enviar">ENVIAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Olá fragmento vazio</string>
    <string name="valor_da_compra">Valor da Compra</string>
    <string name="a_pagar">Valor a Pagar</string>
    <string name="restantes">Parcelas Restantes</string>
    <string name="pagas">Parcelas Pagas</string>
    <string name="nome_do_devedor">Nome do Devedor</string>
    <string name="xx">xx</string>
    <string name="pagou">Pagou</string>
    <string name="inscrever_se">Inscrever-se</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="facebook_app_id">1154288735274806</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="cartao">Selecione um Cartão</string>
    <string name="bot_o_de_adicionar_novo_car_o">Botão de Adicionar Novo Cartão</string>
    <string name="contato">Nome Contato</string>
    <string name="criar_nova_divida">Criar Nova Dívida</string>
    <string name="reais">R$</string>
    <string name="email_n_o_verificado_verifique_a_sua_caixa_de_entrada_e_spam">E-mail não verificado, verifique a sua caixa de entrada e spam!</string>
    <string name="ilustra_o_de_verifica_o_de_email">Ilustração de Verificação de E-mail</string>
    <string name="number">NÚMERO</string>
    <string name="parcelas">Parcelas</string>
    <string name="parcelas_pagas">Parcelas Pagas</string>
    <string name="editar_debito">Editar Debito</string>
    <string name="nome_do_cart_o">Nome do cartão</string>
    <string name="n_o_tem_conta">Não tem conta?</string>
    <string name="channel_id">channel_id</string>
    <string name="recovery_description">Digite seu endereço de e-mail abaixo para iniciar o processo de recuperação de senha. Enviaremos um e-mail com um link para redefinir sua senha.</string>
</resources>