<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.DetailDebtActivity">

    <TextView
        android:id="@+id/nameBuyerDetailDebtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_devedor"
        android:textAlignment="center"
        android:textColor="@color/externalText"
        android:textSize="26sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/textViewParcelas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViewParcelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parcelas"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPagas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameBuyerDetailDebtView" />

    <TextView
        android:id="@+id/installmentsDetailDebtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewParcelas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewParcelas" />

    <TextView
        android:id="@+id/textViewPagas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagas"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRestante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewParcelas" />

    <TextView
        android:id="@+id/paidInstallmentsDetailDebtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPagas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPagas" />

    <TextView
        android:id="@+id/textViewRestante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restantes"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewValorParcela"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPagas" />

    <TextView
        android:id="@+id/remainingPlotsDetailDebtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@color/redButton"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRestante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewRestante" />

    <TextView
        android:id="@+id/textViewValorParcela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valueInstallments"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/textViewValorCompra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRestante" />

    <TextView
        android:id="@+id/valueInstallmentsDetailDebtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@color/externalText"
        android:textSize="16sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewValorParcela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewValorParcela" />

    <TextView
        android:id="@+id/textViewValorCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_da_compra"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorParcela" />

    <TextView
        android:id="@+id/valueOfBuyDetailDebtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@color/externalText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewValorCompra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewValorCompra" />

    <TextView
        android:id="@+id/textViewPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_pagar"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@id/unpaidDetailDebtView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorCompra" />

    <TextView
        android:id="@+id/unpaidDetailDebtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textStyle="bold"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPagar" />

    <Button
        android:id="@+id/buttonPayDetailDebtView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_primary_background"
        android:text="@string/pagou"
        android:textColor="@color/innerText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>