<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/background_card_debt"
    android:elevation="16dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/nameBuyerItemDebitView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/nome_do_devedor"
        android:textAlignment="center"
        android:textColor="@color/externalText"
        android:textSize="26sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/textViewPagas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPagas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/pagas"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRestante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameBuyerItemDebitView" />

    <TextView
        android:id="@+id/paidInstallmentsItemDebitView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/number"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPagas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPagas" />

    <TextView
        android:id="@+id/textViewRestante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/restantes"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewValorParcela"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPagas" />

    <TextView
        android:id="@+id/remainingPlotsItemDebt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/number"
        android:textColor="@color/redButton"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRestante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewRestante" />

    <TextView
        android:id="@+id/textViewValorParcela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/valueInstallments"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/textViewValorCompra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRestante" />

    <TextView
        android:id="@+id/valueInstallmentsItemDebit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/number"
        android:textColor="@color/externalText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewValorParcela"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewValorParcela" />

    <TextView
        android:id="@+id/textViewValorCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/valor_da_compra"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorParcela" />

    <TextView
        android:id="@+id/valueOfBuyItemDebit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/number"
        android:textColor="@color/externalText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewValorCompra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewValorCompra" />

    <TextView
        android:id="@+id/textViewPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_pagar"
        android:textColor="@color/externalText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorCompra" />

    <TextView
        android:id="@+id/unpaidItemDebit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/number"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPagar" />


</androidx.constraintlayout.widget.ConstraintLayout>