<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resetpassword.ResetPasswordFragment">

    <TextView
        android:id="@+id/textTitleResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Redefinir Senha"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textMsgResetPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textMsgResetPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_reset_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textFieldEmailResetPassword"
        app:layout_constraintTop_toBottomOf="@id/textTitleResetPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmailResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@id/buttonSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitleResetPassword">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailResetPassword"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:shadowColor="#ff0000" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:background="@drawable/button_green"
        android:text="@string/enviar"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldEmailResetPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>