<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.registeruser.RegisterUserFragment">

    <TextView
        android:id="@+id/textTitleCreateUserView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/textFieldEmailCreateUserView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmailCreateUserView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@id/textFieldUserNameCreateUserView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitleCreateUserView">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailCreateUserView"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:shadowColor="#ff0000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldUserNameCreateUserView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nome_de_usu_rio"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textFieldPasswordCreateUserView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldEmailCreateUserView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameCreateUserView"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autofillHints="Quantidade de parcelas"
            android:inputType="textPersonName"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPasswordCreateUserView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/buttonSaveNewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldUserNameCreateUserView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordCreateUserView"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonSaveNewUser"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:background="@drawable/button_green"
        android:text="@string/salvar"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFieldPasswordCreateUserView" />
</androidx.constraintlayout.widget.ConstraintLayout>